--- a/CrunchTime/app/src/main/res/values/strings.xml
+++ b/CrunchTime/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CrunchTime</string>
     <string name="action_settings">Settings</string>
+    <string name="goal">YOUR GOAL</string>
 </resources>
